--- a/credentials.yml
+++ b/credentials.yml
@@ -32,7 +32,7 @@ rasa:
   url: "http://localhost:5002"
   
 
-#telegram:
-  #access_token: "5541844103:AAHUsOeZ2Bq2iFEl9JdkalQqc6yHAA_SET4"
-  #verify: "POCporjectbot"
- # webhook_url: "https://f29d-132-205-229-145.ngrok.io/webhooks/telegram/webhook"
+telegram:
+  access_token: "5541844103:AAHUsOeZ2Bq2iFEl9JdkalQqc6yHAA_SET4"
+  verify: "POCporjectbot"
+  webhook_url: "https://f29d-132-205-229-145.ngrok.io/webhooks/telegram/webhook"
