--- a/credentials.yml
+++ b/credentials.yml
@@ -35,4 +35,4 @@ rasa:
 telegram:
   access_token: "5541844103:AAHUsOeZ2Bq2iFEl9JdkalQqc6yHAA_SET4"
   verify: "POCporjectbot"
-  webhook_url: "https://f29d-132-205-229-145.ngrok.io/webhooks/telegram/webhook"
+  webhook_url: "https://d6b4-3-143-17-140.ngrok.io o/webhooks/telegram/webhook"
